# plando-random-settings

./: .git2ignore  .gitignore  CHANGELOG.md  Cargo.toml  Conditionals.py  PlandoRandomSettings.py  README.md  RandomSettingsGenerator.py  TODO.md  conditionals.py  get_randomizer.py  multiselects.py  path_to_rom.txt  random_settings_generator.py  roll_settings.py  rsl_tools.py  rsl_version.py  rslversion.py  update_randomizer.py  utils.py  version.py
assets/: release.sh  rslbot.service  test.ps1
assets/macos/RSL.app/Contents/: Info.plist
assets/weights/: override-coop.json  override-ddr.json  override-multiworld.json  rsl.json  tricks-rsl.json  tricks-standard.json
crate/ootr/: Cargo.toml
crate/ootr/src/: lib.rs
crate/rsl/: Cargo.toml
crate/rsl-cli/: Cargo.toml
crate/rsl-cli/src/: main.rs
crate/rsl-gui/: Cargo.toml
crate/rsl-gui/src/: config.rs  file.rs  main.rs
crate/rsl-updater/: Cargo.toml
crate/rsl-updater/src/: main.rs
crate/rsl-utils/: Cargo.toml
crate/rsl-utils/src/: release.rs
crate/rsl/src/: github.rs  lib.rs
crate/rslbot/: Cargo.toml
crate/rslbot/src/: main.rs
weights/: beginner_adjustments.json  beginner_override.json  bingo_intermediate_override.json  bingo_override.json  conditional_summary.json  coop_override.json  ddr_adjustments.json  ddr_override.json  intermediate_override.json  multiworld_override.json  rando_rando_league_s2.json  random_settings_league_s2.json  rsl_multiworld.json  rsl_season3.json  rsl_season4.json  rsl_season5.json  rsl_season6.json  rsl_season7.json  s6test_override.json  xopar.json
weights/rsl_seasonal_archive/: rsl_season2.json  rsl_season4.json
