[package]
name = "ootr"
version = "6.0.13"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
directories = "3"
proc-macro2 = "1"
pyo3 = "0.13"
quote = "1"
zip = "0.5"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls"]
