[package]
name = "rsl-cli"
version = "2.0.0"
authors = [
    "Matthew Kirby <xoparr@gmail.com>",
    "Fenhl <fenhl@fenhl.net>"
]
edition = "2018"
license = "MIT"
readme = "../../README.md"

[[bin]]
name = "rsl"
path = "src/main.rs"

[dependencies]
serde_json = "1"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.ootr]
path = "../ootr"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "stream"]

[dependencies.rsl]
path = "../rsl"

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
