[package]
name = "rsl-gui"
version = "6.0.3"
authors = [
    "Matthew Kirby <xoparr@gmail.com>",
    "Fenhl <fenhl@fenhl.net>"
]
edition = "2018"

[dependencies]
enum-iterator = "0.6"
itertools = "0.10"
rfd = "0.0.3"
smart-default = "0.6"

[dependencies.iced]
version = "0.2"
features = ["tokio_old"] #TODO change to tokio 1.0 once supported

[dependencies.ootr]
path = "../ootr"

[dependencies.rsl]
path = "../rsl"
