[package]
name = "rsl-gui"
version = "6.0.13"
authors = [
    "Matthew Kirby <xoparr@gmail.com>",
    "Fenhl <fenhl@fenhl.net>"
]
edition = "2018"

[dependencies]
futures = "0.3"
itertools = "0.10"
rfd = "0.1"
serde_json = "1"
smart-default = "0.6"

[dependencies.enum-iterator]
git = "https://github.com/dasgefolge/enum-iterator"
branch = "fields" #TODO finish this PR

[dependencies.iced]
git = "https://github.com/hecrj/iced" #TODO go back to the version on crates.io once it's compatible with tokio 1
rev = "8d882d787e6b7fd7c2435f42f82933e2ed904edf"
features = ["tokio"]

[dependencies.ootr]
path = "../ootr"

[dependencies.rsl]
path = "../rsl"

[dependencies.tokio]
version = "1"
features = ["fs", "process", "time"]

[target.'cfg(windows)'.dependencies]
tokio-stream = "0.1"

[target.'cfg(windows)'.dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "stream"]
