[package]
name = "rsl"
version = "6.0.3"
authors = [
    "Matthew Kirby <xoparr@gmail.com>",
    "Fenhl <fenhl@fenhl.net>"
]
edition = "2018"

[dependencies]
enum-iterator = "0.6"
rand = "0.8"
rand_distr = "0.4"
serde_json = "1"

[dependencies.ootr]
path = "../ootr"

[dependencies.serde]
version = "1"
features = ["derive"]
