[package]
name = "rsl"
version = "6.0.13"
authors = [
    "Matthew Kirby <xoparr@gmail.com>",
    "Fenhl <fenhl@fenhl.net>"
]
edition = "2018"

[dependencies]
directories = "3"
rand = "0.8"
rand_distr = "0.4"
serde_json = "1"
serde_plain = "0.3"
smart-default = "0.6"
structopt = "0.3"
zip = "0.5"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.enum-iterator]
git = "https://github.com/dasgefolge/enum-iterator"
branch = "fields"

[dependencies.ootr]
path = "../ootr"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["fs", "process"]
